Added gist to .bib

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -333,3 +333,11 @@ ISSN={0162-8828},}
   year = 2011
 }
 
+@ARTICLE{Gist,
+    author = {Aude Oliva and Antonio Torralba},
+    title = {Modeling the Shape of the Scene: A Holistic Representation of the Spatial Envelope},
+    journal = {International Journal of Computer Vision},
+    year = {2001},
+    volume = {42},
+    pages = {145--175}
+}
