Made a few more edits

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -333,3 +333,14 @@ ISSN={0162-8828},}
   year = 2011
 }
 
+@INPROCEEDINGS{urtasun,
+    author={Jian Yao and Fidler, S. and Urtasun, R.},
+    booktitle={Computer Vision and Pattern Recognition (CVPR), 2012 IEEE Conference on}, title={Describing the scene as a whole: Joint object detection, scene classification and semantic segmentation},
+    year={2012},
+    month={june},
+    volume={},
+    number={},
+    pages={702 -709},
+    keywords={MSRC-21 benchmark;auxiliary variables;convergent message-passing algorithm;high-order potentials decomposition;holistic scene understanding;joint object detection;model inference;model learning;object class;object location;object region;object spatial extent;pairwise potentials;scene classification;scene type;semantic segmentation;image classification;image segmentation;inference mechanisms;learning (artificial intelligence);message passing;object detection;},
+    doi={10.1109/CVPR.2012.6247739},
+    ISSN={1063-6919},}
