--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -91,7 +91,7 @@ Color information is more reliable at small scales because large regions show to
 
 \subsubsection{Baseline}
 \label{baseline}
-Label propagation requires an initial estimate of the semantic class of each pixel. In our approach we further require an estimate of this classifications' uncertainty. This initial estimate is based on big mean-shift patches.
+Label propagation requires an initial estimate of the semantic class of each pixel. In our approach we further require an estimate of this classifications' uncertainty. This initial estimate is based on big mean-shift patches using texture information. This follows from our intuition of looking at large patches in the first phase and that textons are more reliable over large patches.
 \paragraph{Training} Each training image is divided into segments using
 Mean-shift based EDISON \cite{meanshift}.
 A normalized texton histogram (bag of words representation) is computed for each segment.
@@ -163,9 +163,8 @@ This was due to a very high unary potential learnt for the corresponding node.
 We did not pursue this approach due to very high computational requirements.
 Furthermore, loopy belief propogation did not converge after more than 6 hours of training on a small subset of the images.
 
-\subsection{Adaboost}
-We used Adaboost \cite{Freund96experimentswith} instead of the random forests but random forests gave better results on the classification task. Furthermore, Adaboost had a higher classification time than random forests.
-
+\subsection{Adaboost\cite{Freund96experimentswith}}
+Another classifier that we tried was Adaboost. Adaboost is well suited for our application because, if each weak classifier deals with only a subset of the features, it will perform feature selection. The results on the classification task were, however, not significantly different from Random Forests. This may be because feature selection is also the intuition behind random forests as each tree in the forest acts on a random subset of the feature set. Furthermore, the run time for training and testing was significantly higher when using Adaboost and infeasible given the size of our dataset and computational resources.
 %------------------------------------------------------------------------------------------
 
 
