Added paragraph about training bag of words on all images.

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -128,10 +128,13 @@ YEAR = {2007},
     publisher = {AAAI Press}
 }
 
-@MISC{Wang_hybridmarkov,
-    author = {Jue Wang and Pedro Domingos},
-    title = {Hybrid Markov Logic Networks},
-    year = {}
+@inproceedings{wang2008hybrid,
+  title={Hybrid Markov logic networks},
+  author={Wang, J. and Domingos, P.},
+  booktitle={Proceedings of the 23rd national conference on Artificial intelligence},
+  volume={2},
+  pages={1106--1111},
+  year={2008}
 }
 
 @INPROCEEDINGS{Richardson06markovlogic,
@@ -301,7 +304,7 @@ ISSN={0162-8828},}
     author = {Mark Schmidt},
     title = {UGM: Matlab code for undirected graphical models},
     year = 2007,
-    url = \url{http://www.di.ens.fr/~mschmidt/Software/UGM.html},
+    url = {http://www.di.ens.fr/~mschmidt/Software/UGM.html},
     urldate = {30/01/2012}
 }
 
@@ -311,7 +314,7 @@ ISSN={0162-8828},}
     year = {1996}
 }
 
-@inproceedings{conf/ifiptm/NoorianMF11,
+@inproceedings{progcog,
   added-at = {2011-08-29T00:00:00.000+0200},
   author = {Noorian, Zeinab and Marsh, Stephen and Fleming, Michael},
   biburl = {http://www.bibsonomy.org/bibtex/224dcc785c4c4c37ade9b4c6b132a9f36/dblp},
@@ -331,13 +334,4 @@ ISSN={0162-8828},}
   url = {http://dblp.uni-trier.de/db/conf/ifiptm/ifiptm2011.html#NoorianMF11},
   volume = 358,
   year = 2011
-}
-
-@ARTICLE{Gist,
-    author = {Aude Oliva and Antonio Torralba},
-    title = {Modeling the Shape of the Scene: A Holistic Representation of the Spatial Envelope},
-    journal = {International Journal of Computer Vision},
-    year = {2001},
-    volume = {42},
-    pages = {145--175}
 }
