--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -43,14 +43,14 @@ This paper is structured as follows: Section \ref{sec:Problem} discusses the pro
 
 \subsection{Related Work}
 \label{sec:Related}
-One of the first approaches for semantic segmentation utilized an Implicit Shape Model that %TODO 
+One of the first approaches for semantic segmentation utilized an Implicit Shape Model%TODO @Adwait
 \cite{Leibe04combinedobject}. 
 Another approach used a generative model based on the bag of words representation for such simultaneous recognition and segmentation \cite{cao:spatially}.  
 Furthermore, a method based on some of these approaches for scoring low-level patches according to their class relevance and propagating these posterior probabilities to pixels has been developed \cite{conf/bmvc/CsurkaP08}.
 
-Several recent approaches use random fields to incorporate local cues without implementing low level segmentation. For example, \cite{Kumar:2005:OC:1068507.1068889} proposes a Bayesian method for combining top-down and bottom-up cues. Conditional random fields have also been used for this purpose \cite{Kumar:2005:HFF:1097115.1097790} \cite{Richard04multiscaleconditional}. Finally, Textonboost \cite{Shotton06textonboost:joint} is an approach to learning a discriminative model of object classes incorporating appearance, shape and context information efficiently. We suggest \cite{SegmentRegionsParts} for other semantic image segmentation approaches.
+Several recent approaches use random fields to incorporate local cues without implementing low level segmentation. For example, \cite{Kumar:2005:OC:1068507.1068889} proposes a Bayesian method for combining top-down and bottom-up cues. Conditional random fields have also been used for this purpose \cite{Kumar:2005:HFF:1097115.1097790} \cite{Richard04multiscaleconditional}. Finally, Textonboost \cite{Shotton06textonboost:joint} is an approach to learning a discriminative model of object classes incorporating appearance, shape and context information efficiently. We suggest \cite{SegmentRegionsParts} for a review of other semantic image segmentation approaches.
 
-A third class of algorithms propagate labels given a prior estimate of the segmentation. One of the recent approaches, that inspired this work, used a distance metric in feature space along with %TODO @nitish
+A third class of algorithms propagate labels given a prior estimate of the segmentation. One of the recent approaches, that inspired our work, used a distance metric in feature space along with %TODO @nitish
 
 %------------------------------------------------------------------------------------------
 
