Fixed todo added results of training on all images tests

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -336,6 +336,18 @@ ISSN={0162-8828},}
   year = 2011
 }
 
+@INPROCEEDINGS{supix, 
+author={Ren, X. and Malik, J.}, 
+booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on}, title={Learning a classification model for segmentation}, 
+year={2003}, 
+month={oct.}, 
+volume={}, 
+number={}, 
+pages={10 -17 vol.1}, 
+keywords={Gestalt cues;classification model;grouping;human segmented natural image;image range;image segmentation;information-theoretic analysis;linear classifier;image classification;image matching;image segmentation;image texture;information analysis;}, 
+doi={10.1109/ICCV.2003.1238308}, 
+ISSN={},}
+
 @INPROCEEDINGS{urtasun,
     author={Jian Yao and Fidler, S. and Urtasun, R.},
     booktitle={Computer Vision and Pattern Recognition (CVPR), 2012 IEEE Conference on}, title={Describing the scene as a whole: Joint object detection, scene classification and semantic segmentation},
