--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -32,7 +32,7 @@ Adwait Gandhe \\
 \maketitle
 
 \begin{abstract}
-Semantic image segmentation is the process of assigning human relevant labels to pixels in an image and is a high level vision problem. In this work we attempt a supervised learning approach to solve this problem by training a classifier that helps propagate labels to improve upon a prior distribution over semantic labels. We present our results on the 13 class MSRC V1 Dataset. We achieved an accuracy of $56.88\%$ across all test images and an improvement in accuracy of $0.17\%$ over our prior segmentations.
+Semantic image segmentation is the process of assigning human relevant labels to pixels in an image and is a high level vision problem. In this work we attempt a supervised learning approach to solve this problem by training a classifier that helps propagate labels to improve upon a prior distribution over semantic labels. We present our results on the 13 class MSRC V1 Dataset. We achieved an accuracy of $56.50\%$ across all test images and an improvement in accuracy of $0.17\%$ over our prior segmentations.
 \end{abstract}
 
 \section{Introduction}
@@ -50,7 +50,7 @@ Furthermore, a method based on some of these approaches for scoring low-level pa
 
 Several recent approaches use random fields to incorporate local cues without implementing low level segmentation. For example, \cite{Kumar:2005:OC:1068507.1068889} proposes a Bayesian method for combining top-down and bottom-up cues. Conditional random fields have also been used for this purpose \cite{Kumar:2005:HFF:1097115.1097790} \cite{Richard04multiscaleconditional}. Finally, Textonboost \cite{Shotton06textonboost:joint} is an approach to learning a discriminative model of object classes incorporating appearance, shape and context information efficiently. We suggest \cite{SegmentRegionsParts} for other semantic image segmentation approaches.
 
-A third class of algorithms propagate labels given a prior estimate of the segmentation. One of the recent approaches, that inspired this work, used a distance metric in feature space along with %TODO @nitish
+A third class of algorithms propagate labels given a prior estimate of the segmentation. One of the recent approaches, that inspired this work, propagates labels on a graph of connected superpixels whose weights correspond to an integrated distance metric in feature space.
 
 %------------------------------------------------------------------------------------------
 
@@ -77,7 +77,7 @@ current one from a precomputed dictionary of feature cluster centers.
 If each vector in this dictionary is considered to be a word, this
 representation gives one word per image pixel and is called the TextonMap
 or WordMap. %TODO: Insert figure
-A bag of words histogram is computed for each super pixel or segment by
+A bag of words histogram is computed for each superpixel or segment by
 counting word occurrences.
 Texture information is more reliable over large regions because of inseparability of data at small scales.
 We used the filter bank and dictionary provided by \cite{malisiewicz-cvpr08}.
@@ -103,23 +103,23 @@ The probability distribution $P(Label | feature)$ is computed by counting the oc
 This distribution is copied to each pixel in the segment and a per pixel distribution and entropy is thus available.
 
 \subsubsection{Label Propagation}
-\paragraph{Super pixels and connectivity graph}
+\paragraph{Superpixels and connectivity graph}
 \label{sec:labprop}
-Each image is divided into super pixels at two different scales such that
-the a coarse super pixels align with corresponding finer ones.
-This is achieved by using \cite{}.%TODO Cite the super pixel people.
-A graph is constructed where each fine super pixel is connected to its
-direct neighborhood and to all fine super pixels inside the same
-coarse super pixel.
+Each image is divided into superpixels at two different scales such that
+the a coarse superpixels align with corresponding finer ones.
+This is achieved by using \cite{supix}.
+A graph is constructed where each fine superpixel is connected to its
+direct neighborhood and to all fine superpixels inside the same
+coarse superpixel.
 The later of these connections ensure that we have more long range connections. This is important because some parts of objects are hard to classify as corresponding to that object class without having observed the other parts.
 
 \paragraph{Training the classifier}
-We train a classifier that decides whether or not two super pixels should
+We train a classifier that decides whether or not two superpixels should
 have the same label.
-We assign a label for each super pixel by taking the majority vote over
+We assign a label for each superpixel by taking the majority vote over
 ground truth labels of each pixel in it.
-Each edge in the super pixel graph of a training image is considered a
-positive sample if corresponding super pixels have the same label,
+Each edge in the superpixel graph of a training image is considered a
+positive sample if corresponding superpixels have the same label,
 negative other wise.
 This training data is collected over the k nearest neighbors to the test
 image and used to train a random forest.
@@ -128,22 +128,22 @@ and discriminative learning fails to separate them.
 We resample the training data to ensure a low enough ratio between these
 before training our classifier.
 Note that we train a new random forest for every test image.
-Texton and color features are concatenated to describe each super pixel.
+Texton and color features are concatenated to describe each superpixel.
 Further, each edge in the graph is described by the absolute difference of
 their features.
 
 \paragraph{Propagating Labels}
-The baseline algorithm provides a probability for each pixel label pair. Averaged over all pixels within a super pixel we obtain the distribution for each super pixel.
-The entropy for each super pixel can be calculated from this distribution.
+The baseline algorithm provides a probability for each pixel label pair. Averaged over all pixels within a superpixel we obtain the distribution for each superpixel.
+The entropy for each superpixel can be calculated from this distribution.
 The label with highest probability is treated as the label assigned to
 each pixel.
 A majority vote over this assignment is used to determine the label for
-each super pixel.
+each superpixel.
 When the baseline is inconsistent with the prediction of our random
-forest, we propagate labels from the super pixel with lower entropy to
-the super pixel with higher entropy.
-This propagation is run from the lowest entropy super pixel to the highest
-entropy super pixel propagating labels to super pixels further down in
+forest, we propagate labels from the superpixel with lower entropy to
+the superpixel with higher entropy.
+This propagation is run from the lowest entropy superpixel to the highest
+entropy superpixel propagating labels to superpixels further down in
 this sorted list.
 
 \subsection{Other Attempted Methods}
@@ -188,37 +188,33 @@ Due to a lack of computational resources, optimizing these four parameters simul
 \centering
 	\begin{subfigure}[t]{0.33\textwidth}
 		\centering
-		\includegraphics[width = \textwidth]{./img/pickK}
-		\parbox{.95\textwidth}{\caption{Accuracy versus bag of words model parameters obtained from leave-one-out cross validation. The chosen parameters $k_{imgs} = 15$, and $k_{histo} = 7$ are highlighted. \label{fig:Kbag} }}
+		\includegraphics[width = \textwidth]{./img/pickK3}
+		\parbox{.95\textwidth}{\caption{Accuracy versus bag of words model parameters obtained from leave-one-out cross validation. The parameters that maximized the accuracy were $k_{imgs} = 11$, and $k_{histo} = 3$. \label{fig:Kbag} }}
 			\end{subfigure}
 	\begin{subfigure}[t]{0.33\textwidth}
 		\centering
 		\includegraphics[width = \textwidth]{./img/kforest}
-		\parbox{0.95\textwidth}{\caption{Accuracy versus $k_{forest}$ obtained from leave-one-out cross validation. $k_{forest} = 9$ was chosen. \label{fig:Kforest}}}
+		\parbox{0.95\textwidth}{\caption{Accuracy versus $k_{forest}$ obtained from leave-one-out cross validation. $k_{forest} = 7$ was chosen. \label{fig:Kforest}}}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.33\textwidth}
 		\centering
 		\includegraphics[width = \textwidth]{./img/ratio}
-		\parbox{0.95\textwidth}{\caption{Accuracy versus true/false points ratio obtained from leave-one-out cross validation. A ratio  of 0.5 was chosen. \label{fig:ratio}}}
+		\parbox{0.95\textwidth}{\caption{Accuracy versus true/false points ratio obtained from leave-one-out cross validation. A ratio  of 0.8 was chosen. \label{fig:ratio}}}
 	\end{subfigure}
 	\caption{}
 \end{figure}
 
 Figure \ref{fig:Kbag} shows the accuracy of the final segmentations of the validation images with respect to the bag of words model parameters. 
 For this test, the parameters for the random forest, $k_{forest}$ and ratio, were set to 7 and 0.7 respectively. 
-We chose a set of parameters that produced a high accuracy result and did not have a sharpe drop in accuracy for neighboring parameter values. We considered this as an indicator of stability in that it will generalize well to test data.
-Consequently, we chose $k_{bag} = 15$, and $k_{hist} = 7$ as these parameters satisfy these properties.
+The cross validation procedure found that $k_{bag} = 15$, and $k_{hist} = 7$ maximize the accuracy of the segmentation on the training set.
 
 The next parameter we validated was the number of nearest neighbor images on which to train the random forest, $k_{forest}$. 
-Figure \ref{fig:Kforest} shows the result of the leave-one-out cross validation on this parameter. The relative magnitude of values in the plot show that accuracy is roughly constant for all $k_{forest}$ except for value 1, for which it is markedly decreased. 
-While this plot shows no conclusive reason to choose one $k$ value over another, high $k$ values result in more data points and thus should decrease the variability of the results. 
-However, larger values of $k_{forest}$ such as 11 or 13, resulted in unacceptably slow training times. 
-Therefore, we chose $k_{forest} = 9$ as it represented an acceptable compromise between these features.
+	Figure \ref{fig:Kforest} shows the result of the leave-one-out cross validation on this parameter. The accuracy is clearly maximized at $k_{forest} = 7$. The overall range of the accuracy results is quite small, $0.1\%$. This is because the segmentation result is primarily obtained via the bag of words prior, while the random forest on propagates labels. Therefore, varying the parameters for the random forest will only have a small, but significant effect on the overall accuracy.
 
 The last varied parameter was the ratio of sampled true points to false points used in the training data for the random forest.
 The ratio parameter is of vital importance, as the graph structure proposed in section \ref{sec:labprop} results in a far greater number of same-labeled superpixel pairs than differently-labeled superpixel pairs.
 Without this parameter, all tested classifiers tended to fit to the positive labeled points almost exclusively, resulting in high precision and recall but very low specificity. 
-However, for our application low specificity is extremely undesirable, as a false-positive, resulting in the classifier propagating a label when it should not , can only degrade the segmentation. By randomly sampling the true points in order to balance the number of trues and falses, all the classifiers we tested, were able to more easily find a decision boundary with high that did not compromise recall too much.  
+However, for our application low specificity is extremely undesirable, as a false-positive, resulting in the classifier propagating a label when it should not, can only degrade the segmentation. By randomly sampling the true points in order to balance the number of trues and falses, all the classifiers we tested, were able to more easily find a decision boundary with high accuracy that did not compromise recall too much.  
 From the result of cross-validation on this parameter, shown in figure \ref{fig:ratio}, we conclude that a ratio of 0.8 is ideal.
 
 
@@ -300,9 +296,11 @@ From these confusion matrices we can calculate the accuracy of the prior segment
 	accuracy = \frac{\mathrm{trace}(A)}{n}
 \end{equation}
 
-Where $A$ is a confusion matrix and $n$ is the total number of pixels across all images. We found that the accuracy of our prior segmentations, across all images, was $56.78\%$ while the accuracy of our final segmentations was $56.88\%$. Therefore the improvement in our accuracy was $0.17\%$. This corresponds to a net of roughly 60 superpixels changed correctly across all the test images, a reasonable number considering that some of the prior segmentations do not need improvements.
+Where $A$ is a confusion matrix and $n$ is the total number of pixels across all images. We found that the accuracy of our prior segmentations, across all images, was $56.40\%$ while the accuracy of our final segmentations was $56.50\%$. Therefore the improvement in our accuracy was $0.17\%$. This corresponds to a net of roughly 60 superpixels changed correctly across all the test images, a reasonable number considering that some of the prior segmentations do not need improvements.
 
-Another experiment we conducted compared the performance of a segmentation derived from a prior trained on all the images in the training set to a segmentation derived from a prior trained on the $k$-NN images (in terms of distance in GIST feature space) in the training set. The accuracy of the segmentation when using all images for training was $48\%$, a decrease of $13\%$ compared to accuracy obtained by training the prior on the $k$-NN images $(56.88\%)$. The decrease in segmentation accuracy that results from training on all the images stems from the inseparability of all the classes in the feature space. However, when just the $k$-NN are considered, the number of classes that must be separated drops significantly, from 14 to often just 2 or 3, because the $k$-NN images are mostly comprised of the same few labels as the test image. However, one potential downside of this approach is that if a label contained in the test image does not appear in the $k$-NN images, the produced semantic segmentation can never contain this label. In practice, this does not appear to be a problem, as evidenced by the large improvement in accuracy obtained by training on the $k$-NN.
+Another experiment we conducted compared the performance a bag pf words model trained on all the images in the training set to bag of words trained on the $k$-NN images (in terms of distance in GIST feature space) in the training set. The accuracy of the prior segmentation when using all images for training was $44.44\%$, a decrease of $21.2\%$ compared to accuracy of the prior obtained by on the $k$-NN images $(56.40\%)$. The decrease in segmentation accuracy that results from training on all the images stems from the inseparability of all the classes in the feature space. However, when just the $k$-NN are considered, the number of classes that must be separated drops significantly, from 14 to often just 2 or 3, because the $k$-NN images are mostly comprised of the same few labels as the test image. However, one potential downside of this approach is that if a label contained in the test image does not appear in the $k$-NN images, the produced semantic segmentation can never contain this label. In practice, this does not appear to be a problem, as evidenced by the large improvement in accuracy obtained by training on the $k$-NN.
+
+We performed a similar test to compare the performance of a random forest trained on all the images in the training set versus a random forest trained on the $k$-NN images in the training set. Again, the performance of our segmentation algorithm was reduced after training a classifier on the entire training dataset. In fact, in this case the random forest trained on all the images degraded the prior, resulting in a $.0530 \%$ decrease in accuracy. This is because the decision boundaries that separate superpixels that share a label and superpixels that do not share labels, may overlap for different label pairs. By training on the $k$-NN we greatly reduce the number of labels the classifier must consider, and therefore increase the separability of the data
 %------------------------------------------------------------------------------------------
 
 \section{Conclusion}
