--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -28,6 +28,16 @@ PAGES = {1-8},
 YEAR = {2007}, 
 }
 
+@inproceedings{HOG,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, N. and Triggs, B.},
+  booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={IEEE}
+}
+
 @inproceedings{Russell:2006:UMS:1153171.1153637,
  author = {Russell, Bryan C. and Freeman, William T. and Efros, Alexei A. and Sivic, Josef and Zisserman, Andrew},
  title = {Using Multiple Segmentations to Discover Objects and their Extent in Image Collections},
